--- a/inputpanel.ui
+++ b/inputpanel.ui
@@ -33,6 +33,9 @@
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="toolTip">
+        <string>Truth</string>
+       </property>
        <property name="text">
         <string>⊤</string>
        </property>
@@ -57,6 +60,9 @@
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="toolTip">
+        <string>Or</string>
        </property>
        <property name="text">
         <string>∨</string>
@@ -83,6 +89,9 @@
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="toolTip">
+        <string>Not</string>
+       </property>
        <property name="text">
         <string>¬</string>
        </property>
@@ -107,6 +116,9 @@
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="toolTip">
+        <string>Falsity</string>
        </property>
        <property name="text">
         <string>⊥</string>
@@ -133,6 +145,9 @@
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="toolTip">
+        <string>Implies</string>
+       </property>
        <property name="text">
         <string>→</string>
        </property>
@@ -157,6 +172,9 @@
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="toolTip">
+        <string>Equivalent</string>
        </property>
        <property name="text">
         <string>↔</string>
@@ -183,6 +201,9 @@
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="toolTip">
+        <string>And</string>
+       </property>
        <property name="text">
         <string>∧</string>
        </property>
@@ -207,6 +228,9 @@
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="toolTip">
+        <string>For All</string>
        </property>
        <property name="text">
         <string>∀</string>
@@ -233,6 +257,9 @@
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="toolTip">
+        <string>There Exists</string>
+       </property>
        <property name="text">
         <string>∃</string>
        </property>
@@ -257,6 +284,9 @@
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="toolTip">
+        <string>Equal</string>
        </property>
        <property name="text">
         <string>=</string>
