--- a/welcomepagewidget.ui
+++ b/welcomepagewidget.ui
@@ -13,6 +13,25 @@
   <property name="windowTitle">
    <string>Welcome</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>ET - Equivalence Tutor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="startSolutionButton">
+     <property name="text">
+      <string>Start New Solution</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
