Continue to improve tabWidget

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,6 +23,9 @@
       <property name="tabsClosable">
        <bool>true</bool>
       </property>
+      <property name="movable">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
