--- a/newsolutiondialog.ui
+++ b/newsolutiondialog.ui
@@ -36,6 +36,20 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="endFormulaLineEdit"/>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="nameLabel">
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="nameLineEdit">
+       <property name="text">
+        <string>New Solution</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
