--- a/newsolutiondialog.ui
+++ b/newsolutiondialog.ui
@@ -24,7 +24,11 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="startFormulaLineEdit"/>
+      <widget class="QLineEdit" name="startFormulaLineEdit">
+       <property name="whatsThis">
+        <string>The formula you want to apply equivalence rules with.</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="endFormulaLabel">
@@ -34,7 +38,11 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="endFormulaLineEdit"/>
+      <widget class="QLineEdit" name="endFormulaLineEdit">
+       <property name="whatsThis">
+        <string>The formula you are trying to prove.</string>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="nameLabel">
@@ -45,6 +53,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="nameLineEdit">
+       <property name="whatsThis">
+        <string>The name of solution.</string>
+       </property>
        <property name="text">
         <string>New Solution</string>
        </property>
