Add menu entry to trigger full bracket

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,7 +36,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -57,6 +57,8 @@
     </property>
     <addaction name="actionUndo"/>
     <addaction name="actionRedo"/>
+    <addaction name="separator"/>
+    <addaction name="actionFull_Brackets"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
     <property name="title">
@@ -138,6 +140,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionFull_Brackets">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Full Brackets</string>
    </property>
   </action>
  </widget>
