--- a/subformulaselectiondialog.ui
+++ b/subformulaselectiondialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>84</height>
+    <width>250</width>
+    <height>50</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Select subformula</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
