--- a/matchedruleselectiondialog.ui
+++ b/matchedruleselectiondialog.ui
@@ -6,16 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>100</width>
-    <height>50</height>
+    <width>310</width>
+    <height>269</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout"/>
+    <layout class="QVBoxLayout" name="fromLayout"/>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="toLayout"/>
    </item>
   </layout>
  </widget>
