--- a/subformulaselectiondialog.ui
+++ b/subformulaselectiondialog.ui
@@ -6,14 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>250</width>
-    <height>50</height>
+    <width>331</width>
+    <height>94</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Select subformula</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QLabel" name="instructionLabel1">
+     <property name="text">
+      <string>Select the operator to apply rules on</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="instructionLabel2">
+     <property name="text">
+      <string>Hover to see subformula</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="subformulaeLayout"/>
    </item>
