--- a/formulareplacementdialog.ui
+++ b/formulareplacementdialog.ui
@@ -15,6 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <widget class="QLabel" name="instructionLabel">
+     <property name="text">
+      <string>Choose the rule to apply</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout"/>
    </item>
   </layout>
