--- a/matchedruleselectiondialog.ui
+++ b/matchedruleselectiondialog.ui
@@ -13,12 +13,19 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0">
     <layout class="QVBoxLayout" name="fromLayout"/>
    </item>
-   <item>
+   <item row="1" column="1">
     <layout class="QVBoxLayout" name="toLayout"/>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="instructionLabel">
+     <property name="text">
+      <string>Choose how the rule is applied</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
