Rework MatchedRuleSelectionDialog for better UI

--- a/matchedruleselectiondialog.ui
+++ b/matchedruleselectiondialog.ui
@@ -7,23 +7,52 @@
     <x>0</x>
     <y>0</y>
     <width>310</width>
-    <height>269</height>
+    <height>196</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
-    <layout class="QVBoxLayout" name="fromLayout"/>
-   </item>
-   <item row="1" column="1">
-    <layout class="QVBoxLayout" name="toLayout"/>
-   </item>
-   <item row="0" column="0" colspan="2">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QLabel" name="instructionLabel">
      <property name="text">
       <string>Choose how the rule is applied</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QGroupBox" name="fromGroupBox">
+       <property name="title">
+        <string>From</string>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <layout class="QVBoxLayout" name="fromVLayout"/>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QGroupBox" name="toGroupBox">
+       <property name="title">
+        <string>To</string>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <layout class="QVBoxLayout" name="toVLayout"/>
+        </item>
+       </layout>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
