--- a/solutiontabwidget.ui
+++ b/solutiontabwidget.ui
@@ -15,11 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QPlainTextEdit" name="textEdit">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
+    <widget class="QListWidget" name="listWidget"/>
    </item>
   </layout>
  </widget>
