--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,6 +47,7 @@
     <addaction name="actionOpen_Solution"/>
     <addaction name="actionSave"/>
     <addaction name="separator"/>
+    <addaction name="actionSave_as_user_rule"/>
     <addaction name="actionClose"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
@@ -151,6 +152,11 @@
    </property>
    <property name="text">
     <string>Full Brackets</string>
+   </property>
+  </action>
+  <action name="actionSave_as_user_rule">
+   <property name="text">
+    <string>Save as user rule</string>
    </property>
   </action>
  </widget>
